; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-merge.c_blk_attempt_req_merge.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-merge.c_blk_attempt_req_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request_queue = type { i32 }
%struct.request = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @blk_attempt_req_merge(%struct.request_queue* %0, %struct.request* %1, %struct.request* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.request_queue*, align 8
  %6 = alloca %struct.request*, align 8
  %7 = alloca %struct.request*, align 8
  %8 = alloca %struct.request*, align 8
  store %struct.request_queue* %0, %struct.request_queue** %5, align 8
  store %struct.request* %1, %struct.request** %6, align 8
  store %struct.request* %2, %struct.request** %7, align 8
  %9 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  %10 = load %struct.request*, %struct.request** %6, align 8
  %11 = load %struct.request*, %struct.request** %7, align 8
  %12 = call %struct.request* @attempt_merge(%struct.request_queue* %9, %struct.request* %10, %struct.request* %11)
  store %struct.request* %12, %struct.request** %8, align 8
  %13 = load %struct.request*, %struct.request** %8, align 8
  %14 = icmp ne %struct.request* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load %struct.request*, %struct.request** %8, align 8
  %17 = call i32 @blk_put_request(%struct.request* %16)
  store i32 1, i32* %4, align 4
  br label %19

18:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %19

19:                                               ; preds = %18, %15
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local %struct.request* @attempt_merge(%struct.request_queue*, %struct.request*, %struct.request*) #1

declare dso_local i32 @blk_put_request(%struct.request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
